--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
       <div fxFlex="100">
         <div class="topbarClass">
 
-          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column">
+          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column" (click)="LoadSelectedTask('new')">
             <div fxFlex fxLayout>
               <div fxFlex>
                 <img src="assets/images/dashboard/new.png">
@@ -25,7 +25,7 @@
             </div>
             <div fxFlex fxLayout class="my-8">
               <div fxFlex="40" fxLayoutAlign="end start">
-                <span class="h1 mr-8">25</span>
+                <span class="h1 mr-8">{{AllNewTasksCount}}</span>
               </div>
               <div fxFlex="60" fxLayoutAlign="center center">
                 <span class="subTitle">tasks for today</span>
@@ -33,7 +33,7 @@
             </div>
           </mat-card>
 
-          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column">
+          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column" (click)="LoadSelectedTask('open')">
             <div fxFlex fxLayout>
               <div fxFlex>
                 <img src="assets/images/dashboard/open.png">
@@ -46,15 +46,15 @@
             </div>
             <div fxFlex fxLayout class="my-8">
               <div fxFlex="40" fxLayoutAlign="end start">
-                <span class="h1 mr-8">13</span>
+                <span class="h1 mr-8">{{AllOpenTasksCount}}</span>
               </div>
               <div fxFlex="60" fxLayoutAlign="start center">
-                <span class="subTitle">/ 25</span>
+                <span class="subTitle">/ {{AllTasksCount}}</span>
               </div>
             </div>
           </mat-card>
 
-          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column">
+          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column" (click)="LoadSelectedTask('escalated')">
             <div fxFlex fxLayout>
               <div fxFlex>
                 <img src="assets/images/dashboard/escalate.png">
@@ -67,7 +67,7 @@
             </div>
             <div fxFlex fxLayout class="my-8">
               <div fxFlex="40" fxLayoutAlign="end start">
-                <span class="h1 mr-8">02</span>
+                <span class="h1 mr-8">{{AllEscalatedTasksCount}}</span>
               </div>
               <div fxFlex="60" fxLayoutAlign="center center">
                 <span class="subTitle">issues for today</span>
@@ -75,7 +75,7 @@
             </div>
           </mat-card>
 
-          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column">
+          <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column" (click)="LoadSelectedTask('rework')">
             <div fxFlex fxLayout>
               <div fxFlex>
                 <img src="assets/images/dashboard/reWork.png">
@@ -88,7 +88,7 @@
             </div>
             <div fxFlex fxLayout class="my-8">
               <div fxFlex="40" fxLayoutAlign="end start">
-                <span class="h1 mr-8">01</span>
+                <span class="h1 mr-8">{{AllReworkTasksCount}}</span>
               </div>
               <div fxFlex="60" fxLayoutAlign="center center">
                 <span class="subTitle">issues for today</span>
@@ -112,41 +112,41 @@
 
                   <ng-container matColumnDef="TaskGroup">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Task Group </th>
-                    <td mat-cell *matCellDef="let element"> {{element.TaskGroup}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.TaskGroupTitle}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="TaskSubGroup">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Task Sub-Group </th>
-                    <td mat-cell *matCellDef="let element"> {{element.TaskSubGroup}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.TaskSubGroupTitle}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="TaskName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Task Name</th>
-                    <td mat-cell *matCellDef="let element"> {{element.TaskName}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.Title}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="OwnerName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Owner Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.OwnerName}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Assigned To </th>
+                    <td mat-cell *matCellDef="let element"> {{element.OwnerNames}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="PlannedCompletionDate">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Planned Completion Date </th>
-                    <td mat-cell *matCellDef="let element"> {{element.PlannedCompletionDate}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.CompletionBefore | date:'dd/MM/yyyy'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
+                    <td mat-cell *matCellDef="let element"> Active </td>
                   </ng-container>
-                  
+
                   <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;" matRipple style=" cursor: pointer;"></tr>
                 </table>
-                <!-- <div *ngIf="!allInvoiceDetails?.length">
+                <div *ngIf="!AllTasks?.length">
                   <mat-icon svgIcon="infoIcon" style="color: #1b56ca;margin-top: 10px;margin-left: 70px"></mat-icon>
                   <span style="margin-left: 10px;">The table does not contain any data</span>
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
       </div> -->
     </div>
   </div>
-  <mat-progress-spinner *ngIf="isProgressBarVisibile" class="progressBarPostion" color="accent" mode="indeterminate">
+  <mat-progress-spinner *ngIf="IsProgressBarVisibile" class="progressBarPostion" color="accent" mode="indeterminate">
   </mat-progress-spinner>
-  <div id="overlay" *ngIf="isProgressBarVisibile"></div>
+  <div id="overlay" *ngIf="IsProgressBarVisibile"></div>
 </div>
