--- a/src/app/allModules/pages/attachment-dialog/attachment-dialog.component.html
+++ b/src/app/allModules/pages/attachment-dialog/attachment-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-content-wrapper">
   <mat-toolbar class="toolBg m-0">
     <mat-toolbar-row fxFlex fxLayout="row" fxLayoutAlign="space-between center">
-      <span class="title dialog-title">Attachment</span>
+      <span class="title dialog-title">{{attachmentDetails?.FileName}}</span>
       <div>
         <button mat-icon-button (click)="downloadFile()">
           <mat-icon>arrow_downward</mat-icon>
