task and attachment screen design..

--- a/src/app/allModules/pages/task/task.component.html
+++ b/src/app/allModules/pages/task/task.component.html
@@ -26,7 +26,7 @@
                     [style.border-left-color]="selectID==usr.TaskID?'#efb577':'#cccccc'">
                     <div fxLayout fxLayoutAlign="space-between center">
                       <div fxFlex><strong>{{usr.Title}}</strong></div>
-                      <div fxFlex>{{usr.Type}}</div>
+                      <div fxFlex fxLayoutAlign="end" class="mr-8">{{usr.Type}}</div>
                     </div>
                     <div style="font-size: 11px">
                       <div style="margin-top: 10px;color: #2e2e2e">
