--- a/src/app/allModules/pages/task-group/task-group.component.html
+++ b/src/app/allModules/pages/task-group/task-group.component.html
@@ -419,7 +419,7 @@
                             <th mat-header-cell *matHeaderCellDef>Ac. St. Dt.</th>
                             <td mat-cell *matCellDef="let row; let index = index"  [formGroupName]="index">                     
                               <input matInput [matDatepicker]="picker23" (click)="picker23.open()"
-                                formControlName="ActualStartDate" style="outline: 1px solid black; height: 20px;">
+                                formControlName="ActualStartDate" style="outline: 1px solid gray; height: 20px;">
                               <mat-datepicker #picker23></mat-datepicker>
                               <span class="pl-4 errorClass" *ngIf="SprintFormGroup.get('Sprints').controls[index].get('ActualStartDate').touched && 
                         SprintFormGroup.get('Sprints').controls[index].get('ActualStartDate').hasError('required')">
@@ -432,7 +432,7 @@
                             <th mat-header-cell *matHeaderCellDef>Ac. Et. Dt.</th>
                             <td mat-cell *matCellDef="let row; let index = index" [formGroupName]="index">
                               <input appearance="outline" matInput [matDatepicker]="picker24" (click)="picker24.open()"
-                                formControlName="ActualEndDate" style="outline: 1px solid black; height: 20px;">
+                                formControlName="ActualEndDate" style="outline: 1px solid gray; height: 20px;">
                               <mat-datepicker #picker24></mat-datepicker>
                               <span class="pl-4 errorClass" *ngIf="SprintFormGroup.get('Sprints').controls[index].get('ActualEndDate').touched && 
                         SprintFormGroup.get('Sprints').controls[index].get('ActualEndDate').hasError('required')">
@@ -444,7 +444,7 @@
                           <ng-container matColumnDef="ActualEffort">
                             <th mat-header-cell *matHeaderCellDef> Ac Effort </th>
                             <td mat-cell *matCellDef="let row; let index = index" [formGroupName]="index">
-                              <input matInput formControlName="ActualEffort" style="outline: 1px solid black; height: 20px;">
+                              <input matInput formControlName="ActualEffort" style="outline: 1px solid gray; height: 20px;">
                               <span class="pl-4 errorClass" *ngIf="SprintFormGroup.get('Sprints').controls[index].get('ActualEffort').touched && 
                         SprintFormGroup.get('Sprints').controls[index].get('ActualEffort').hasError('required')">
                                 *
