--- a/src/app/allModules/master/user/user.component.html
+++ b/src/app/allModules/master/user/user.component.html
@@ -52,7 +52,7 @@
                             Clear
                         </button>
                         <button (click)="SaveClicked()" class="SaveBtn" mat-raised-button>
-                            {{SelectedUser.UserID?'Update':'Create'}}</button>
+                            {{SelectedUser.UserID?'Update':'Save'}}</button>
                     </div>
                 </mat-card>
                 <div class="sidenav-content" fxFlex fxLayout="column">
