--- a/src/app/allModules/master/role/role.component.html
+++ b/src/app/allModules/master/role/role.component.html
@@ -52,7 +52,7 @@
                             Clear
                         </button>
                         <button (click)="SaveClicked()" class="SaveBtn" mat-raised-button>
-                            {{SelectedRole.RoleID?'Update':'Create'}}</button>
+                            {{SelectedRole.RoleID?'Update':'Save'}}</button>
                     </div>
                 </mat-card>
                 <div class="sidenav-content" fxFlex fxLayout="column">
