--- a/src/app/allModules/pages/task/task.component.scss
+++ b/src/app/allModules/pages/task/task.component.scss
@@ -282,6 +282,10 @@
     margin-top: 14px;
     height: 40px;
   }
+  .ClearBtn{
+    margin-top: 14px;
+    height: 40px;
+  }
   .SaveBtn {
     background-color: #efb577;
     color: white;
