--- a/src/app/allModules/pages/task/task.component.scss
+++ b/src/app/allModules/pages/task/task.component.scss
@@ -39,6 +39,8 @@
     color: white;
   }
   .theme-options-sidebar {
+    margin-top: 107px !important;
+    background-color: rgb(255, 253, 249) !important;
     width: 360px;
     min-width: 360px;
     max-width: 360px;
