--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -137,7 +137,7 @@
 
                   <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                    <td mat-cell *matCellDef="let element"> Active </td>
+                    <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
